--- a/src/styles/h1.css
+++ b/src/styles/h1.css
@@ -1,6 +1,6 @@
 /* Header custom styles */
 .h1cst {
-    background-color: #0033ff;
+    background-color: #0969DA;
     color: white;
     margin-top: 0em;
     margin-bottom: 0em;
