--- a/src/styles/h1.css
+++ b/src/styles/h1.css
@@ -1,11 +1,13 @@
+#main_container {
+    padding: 0px 20px 0px 10px;
+}
+
 /* Header custom styles */
-.h1cst {
+h1 {
     background-color: #0969DA;
     color: white;
-    margin-top: 0em;
-    margin-bottom: 0em;
-    margin-left: 0.2em;
-    margin-right: 0.2em;
-    padding: 0.25em 0.5em;
+    margin: 0px;
+    padding: 0.25em;
     width: 100%;
+    border-radius: 10px;
 }
